/fix :bug: z-index on cookie.:truck: path to logos

--- a/src/components/atom/organisms/cookiebanner/_cookiebanner.scss
+++ b/src/components/atom/organisms/cookiebanner/_cookiebanner.scss
@@ -10,6 +10,7 @@
 
 .cookiebanner{
     position: fixed;
+    z-index: 100;
     min-height: 137px;
     bottom: 0px;
     background-color: var.$lightBeige;
